--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,4 +90,4 @@ jobs:
       - name: Danger
         run: npx danger ci
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
