--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,8 @@ jobs:
       pull-requests: write
     strategy:
       matrix:
-        node-version: [18, 20]
+        node-version: [20]
+        pg-version: [14]
     env:
       NODE_OPTIONS: --max-old-space-size=8192
       NODE_VERSION: ${{ matrix.node-version }}
@@ -155,9 +156,9 @@ jobs:
     needs: [build]
     strategy:
       matrix:
-        node-version: [18, 20]
-        pg-version: [12, 14, 16]
-        redis-version: [6, 7]
+        node-version: [20]
+        pg-version: [14]
+        redis-version: [7]
     env:
       NODE_OPTIONS: --max-old-space-size=8192
       NODE_VERSION: ${{ matrix.node-version }}
